<resources>
  <string name="app_name">Nonstopfit</string>

  <string name="button_apply">Подтвердить</string>
  <string name="button_close">Закрыть</string>
  <string name="button_enter">Войти</string>
  <string name="button_next">Далее</string>
  <string name="button_reset_password">Забыли пароль?</string>
  <string name="button_send_password">Выслать пароль</string>
  <string name="button_settings">Перейти в настройки</string>
  <string name="button_sign_up">Зарегистрироваться</string>
  <string name="button_skip">Пропустить</string>

  <string-array name="cities">
    <item>Не выбран</item>
    <item>Москва</item>
  </string-array>

  <string name="error_authorization_failed">Ошибка авторизации, проверьте интернет соединение</string>
  <string name="error_city_is_not_selected">Не выбран город</string>
  <string name="error_date_is_invalid">Некорректная дата</string>
  <string name="error_denied_sms_permission">Вы отказались подтвердить доступ к смс. Поле смс кода не будет автоматически заполняться. Вы можете включить доступ в настройках.</string>
  <string name="error_email_is_not_valid">Недопустимый email адрес</string>
  <string name="error_field_is_empty">Заполните поле</string>
  <string name="error_login_and_password_incorrect">Неверная пара логина и пароля</string>
  <string name="error_passwords_dont_match">Пароли не совпадают</string>
  <string name="error_response_is_null">Пустой ответ с сервера</string>

  <string name="file_key_shared_preference_app">%1$s.APP_PREFERENCE</string>

  <string name="hint_birthday">Дата рождения</string>
  <string name="hint_confirm_password">Повторите пароль</string>
  <string name="hint_email">Email адресс</string>
  <string name="hint_firstname">Ваше имя</string>
  <string name="hint_login">Имя</string>
  <string name="hint_login_or_mail">Имя или Email</string>
  <string name="hint_password">Пароль</string>
  <string name="hint_phone">Телефон</string>
  <string name="hint_sms_code">Введите полученный смс код</string>
  <string name="hint_surname">Фамилия</string>

  <string name="message_authorization">Авторизация</string>
  <string name="message_need_sms_permissions">Для правильной работы данного экрана нужно подтвердить доступ к смс.</string>

  <integer name="password_strike">320</integer>

  <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
  <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
  <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
  <string name="path_password_eye_masked">M12,7c2.76,0 5,2.24 5,5 0,0.65 -0.13,1.26 -0.36,1.83l2.92,2.92c1.51,-1.26 2.7,-2.89 3.43,-4.75 -1.73,-4.39 -6,-7.5 -11,-7.5 -1.4,0 -2.74,0.25 -3.98,0.7l2.16,2.16C10.74,7.13 11.35,7 12,7zM2,4.27l2.28,2.28 0.46,0.46C3.08,8.3 1.78,10.02 1,12c1.73,4.39 6,7.5 11,7.5 1.55,0 3.03,-0.3 4.38,-0.84l0.42,0.42L19.73,22 21,20.73 3.27,3 2,4.27zM7.53,9.8l1.55,1.55c-0.05,0.21 -0.08,0.43 -0.08,0.65 0,1.66 1.34,3 3,3 0.22,0 0.44,-0.03 0.65,-0.08l1.55,1.55c-0.67,0.33 -1.41,0.53 -2.2,0.53 -2.76,0 -5,-2.24 -5,-5 0,-0.79 0.2,-1.53 0.53,-2.2zM11.84,9.02l3.15,3.15 0.02,-0.16c0,-1.66 -1.34,-3 -3,-3l-0.17,0.01z</string>
  <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>

  <string name="radio_button_gender_female">Женщина</string>
  <string name="radio_button_gender_male">Мужчина</string>
  <string name="radio_button_gender_no_matter">Не важно</string>

  <string name="regexp_validate_simple_date">^(?:(?:31(\\/|-|\\.)(?:0?[13578]|1[02]))\\1|(?:(?:29|30)(\\/|-|\\.)(?:0?[1,3-9]|1[0-2])\\2))(?:(?:1[6-9]|[2-9]\\d)?\\d{2})$|^(?:29(\\/|-|\\.)0?2\\3(?:(?:(?:1[6-9]|[2-9]\\d)?(?:0[48]|[2468][048]|[13579][26])|(?:(?:16|[2468][048]|[3579][26])00))))$|^(?:0?[1-9]|1\\d|2[0-8])(\\/|-|\\.)(?:(?:0?[1-9])|(?:1[0-2]))\\4(?:(?:1[6-9]|[2-9]\\d)?\\d{2})$</string>

  <string name="text_enter_between_facebook">Войти через Facebook</string>

  <string name="title_authorization">Nonstop.ru</string>
  <string name="title_reset">Восстановление пароля</string>
  <string name="title_sign_up">Регистрация</string>
  <string name="title_sms_apply">Поддтверждение по смс</string>
  <string name="message_signing_user">Регистрация пользователя</string>
  <string name="text_sign_was_success">Регистрация прошла успешно!</string>
  <string name="text_sign_use_app">Теперь вы можете пользоваться всеми возможностями приложения</string>
  <string name="button_run_app">Запустить приложение</string>
  <string name="text_reset_password_description">Введите указанный при регистрации e-mail, на него будет отправлено письмо с кодом подтверждения</string>
  <string name="button_after_reset_success">Хорошо</string>
  <string name="text_after_reset_success_description">Инструкция по изменению пароля отправлена на указанный телефон\\email при регитсрации</string>
  <string name="text_after_reset_success_title">Пароль отправлен!</string>
  <string name="error_sign_was_failed">Ошибка регитсрации, проверьте интернет соединение</string>
</resources>
