<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/disable"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/ll_reset_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/white"
      android:divider="@drawable/empty_divider_16dp"
      android:orientation="vertical"
      android:padding="@dimen/main_padding"
      android:showDividers="middle"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_reset_password_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <EditText
          android:id="@+id/et_field"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_email"
          android:imeOptions="actionDone"
          android:inputType="text"
          android:maxLines="1"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
          tools:text="@string/hint_email"
          />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/b_send_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send_password"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_reset_form_success"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/white"
      android:divider="@drawable/empty_divider_16dp"
      android:orientation="vertical"
      android:padding="@dimen/main_padding"
      android:showDividers="middle"
      android:visibility="gone"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_after_reset_success_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/color_main_background"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_after_reset_success_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <Button
        android:id="@+id/b_after_reset_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_after_reset_success"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        />

  </LinearLayout>

</LinearLayout>