<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:id="@+id/ll_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:divider="@drawable/empty_divider_10dp"
      android:orientation="vertical"
      android:padding="20dp"
      android:showDividers="middle"
      >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <EditText
          android:id="@+id/et_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_login"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:maxLines="1"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
          tools:text="@string/hint_login"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_password"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
          tools:text="@string/hint_password"
          />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/b_enter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="@string/button_enter"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

    <Button
        android:id="@+id/b_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_skip"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

  </LinearLayout>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_below="@+id/ll_login_form"
      android:padding="10dp"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:divider="@drawable/empty_divider_10dp"
        android:orientation="horizontal"
        android:showDividers="middle"
        >

      <Button
          android:id="@+id/b_sign_up"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:text="@string/button_sign_up"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
          />

      <Button
          android:id="@+id/b_reset_password"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:text="@string/button_reset_password"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
          />

    </LinearLayout>

  </FrameLayout>

</RelativeLayout>