<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <ScrollView
      android:id="@+id/sv_sign_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@id/b_sign_up"
      android:descendantFocusability="beforeDescendants"
      android:focusable="true"
      >

    <LinearLayout
        android:id="@+id/ll_sign_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

      <android.support.design.widget.TextInputLayout
          android:id="@+id/til_firstname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"
          android:orientation="vertical"
          >

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_firstname"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/hint_firstname"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/til_surname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"
          android:orientation="vertical"
          >

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surname"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/hint_surname"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/til_phone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"
          android:orientation="vertical"
          >

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/hint_phone"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/til_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"
          android:orientation="vertical"
          >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/hint_email"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/til_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"
          android:orientation="vertical"
          >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/hint_password"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/til_confirm_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"
          >

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/hint_confirm_password"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/til_birthday"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"
          >

        <EditText
            android:id="@+id/et_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birthday"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/hint_birthday"
            />

      </android.support.design.widget.TextInputLayout>

      <RadioGroup
          android:id="@+id/rg_gender"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="15dp"
          android:orientation="horizontal"
          >

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/arb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button_gender_male"
            />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/arb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button_gender_female"
            />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/arb_no_matter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radio_button_gender_no_matter"
            />

      </RadioGroup>

      <android.support.v7.widget.AppCompatSpinner
          android:id="@+id/s_city"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

    </LinearLayout>

  </ScrollView>

  <Button
      android:id="@+id/b_sign_up"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_gravity="center"
      android:layout_margin="15dp"
      android:text="@string/button_sign_up"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
      />

</RelativeLayout>