<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/disable"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/ll_sign_form_success"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/white"
      android:divider="@drawable/empty_divider_16dp"
      android:orientation="vertical"
      android:padding="@dimen/main_padding"
      android:showDividers="middle"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_was_success"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/color_main_background"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_use_app"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <Button
        android:id="@+id/b_after_sign_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_run_app"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        />

  </LinearLayout>

</LinearLayout>