<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:id="@+id/ll_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_centerVertical="true"
      android:orientation="vertical"
      android:padding="20dp"
      >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        >

      <EditText
          android:id="@+id/et_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_login"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:maxLines="1"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
          tools:text="@string/hint_login"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        >

      <EditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_password"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
          tools:text="@string/hint_password"
          />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/b_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/button_enter"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

  </LinearLayout>

</RelativeLayout>